[tool.poetry]
name = "python-toolbox"
version = "0.1.0"
description = ""
authors = ["MarcusXYZ <mpereirassa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask-vuejs = "^1.2.0"
Flask-SQLAlchemy = "^2.4.4"
Flask-Admin = "^1.5.7"
dynaconf = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest-flask = "^1.1.0"
pytest = "^6.2.1"
black = "^20.8b1"
pre-commit = "^2.9.3"
Flask-Debug = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
